--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "zmq",
-  "version": "2.15.3",
+  "name": "zmq-edward",
+  "version": "0.0.1",
   "description": "Bindings for node.js and io.js to ZeroMQ",
   "main": "index",
   "repository": {
     "type": "git",
-    "url": "http://github.com/JustinTulloss/zeromq.node.git"
+    "url": "https://github.com/Edward-Doong/zmq-edward.git"
   },
   "dependencies": {
     "nan": "~2.3.0",
+    "prebuild": "^2.9.0",
     "bindings": "~1.2.1"
   },
   "devDependencies": {
@@ -20,6 +21,7 @@
     "node": ">=0.8"
   },
   "scripts": {
+    "install": "prebuild --install",
     "test": "mocha --expose-gc --slow 2000 --timeout 600000"
   },
   "keywords": ["zeromq", "zmq", "0mq", "ømq", "libzmq", "native", "binding", "addon"],
